<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dila</groupId>
  <artifactId>dila-ai-markup-plugin</artifactId>
  <version>0.4.0</version>
  <packaging>jar</packaging>

  <name>DILA AI Markup Plugin</name>
  <description>AI markup assistant for detecting and working with DILA references.</description>

  <developers>
    <developer>
      <name>Jeff Y.H. Wu</name>
      <email>jeffwu@dila.edu.tw</email>
      <roles>
        <role>Project Assistant</role>
      </roles>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <oxygen.sdk.version>27.1.0.3</oxygen.sdk.version>
    <javac.path>${env.JAVA_HOME}/bin/javac</javac.path>
    <!-- Force Java 8 compatibility -->
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.release>8</maven.compiler.release>
  </properties>

  <repositories>
    <repository>
      <id>oxygenxml</id>
      <name>oXygen XML SDK Maven Repository</name>
      <url>https://oxygenxml.com/maven/</url>
    </repository>
  </repositories>

  <dependencies>

    <dependency>
      <groupId>com.oxygenxml</groupId>
      <artifactId>oxygen-sdk</artifactId>
      <version>${oxygen.sdk.version}</version>
      <scope>provided</scope>
    </dependency>
    <!-- If you need MathFlow rendering, the best is to import the MathFlow 
      SDK jars as artifacts in your Maven repository and add dependencies here. -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    
    <!-- Mockito for mocking dependencies -->
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>4.11.0</version>
      <scope>test</scope>
    </dependency>
    
    <!-- AssertJ for fluent assertions -->
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.24.2</version>
      <scope>test</scope>
    </dependency>
    
    <!-- Hamcrest for better matchers -->
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <version>2.2</version>
      <scope>test</scope>
    </dependency>

    <!-- JSON parsing for CBRD API responses (runtime) -->
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20240303</version>
    </dependency>

  </dependencies>
  <!-- Choose the Java compiler according to the platform. -->
  <profiles>
    <profile>
      <id>win</id>
      <activation>
        <os>
          <family>Windows</family>
        </os>
      </activation>
      <properties>
        <javac.path>${env.JAVA_HOME}\bin\javac.exe</javac.path>
      </properties>
    </profile>
  </profiles>
  
  <build>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>1.4.1</version>
        <executions>
          <execution>
            <id>enforce-files-exist</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireFilesExist>
                  <files>
                    <file>${javac.path}</file>
                  </files>
                  <message>You must set the JAVA_HOME environment
                    variable to point to a JDK installation.</message>
                </requireFilesExist>
              </rules>
              <fail>true</fail>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <fork>true</fork>
          <executable>${javac.path}</executable>
          <release>${maven.compiler.release}</release>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <debug>true</debug>
        </configuration>
      </plugin>
      
      <!-- Enhanced Surefire Plugin for Better Test Reporting -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
            <include>**/*Tests.java</include>
          </includes>
          <excludes>
            <exclude>**/*IntegrationTest.java</exclude>
          </excludes>
          <systemPropertyVariables>
            <dila.debug>true</dila.debug>
            <java.awt.headless>true</java.awt.headless>
          </systemPropertyVariables>
          <parallel>methods</parallel>
          <threadCount>4</threadCount>
          <forkCount>1</forkCount>
          <reuseForks>true</reuseForks>
          <argLine>-Xmx512m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>install</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <descriptors>
                <descriptor>assembly.xml</descriptor>
              </descriptors>
              <finalName>dilaAIMarkupPlugin</finalName>
              <appendAssemblyId>false</appendAssemblyId>
            </configuration>
          </execution>
        </executions>
      </plugin>
      
      <!-- Copy and rename extension.xml to dilaAIMarkupPlugin.xml -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <id>copy-extension-xml</id>
            <phase>process-resources</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${basedir}</outputDirectory>
              <resources>
                <resource>
                  <directory>src/main/resources</directory>
                  <includes>
                    <include>extension.xml</include>
                  </includes>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      
      <!-- Rename the copied extension.xml to dilaAIMarkupPlugin.xml -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>rename-extension-xml</id>
            <phase>process-resources</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <move file="${basedir}/extension.xml" 
                      tofile="${basedir}/dilaAIMarkupPlugin.xml" 
                      overwrite="true" 
                      failonerror="false"/>
                <echo message="Renamed extension.xml to dilaAIMarkupPlugin.xml in root directory"/>
              </target>
            </configuration>
          </execution>
          <execution>
            <id>copy-zip-to-root</id>
            <phase>install</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <copy file="${project.build.directory}/dilaAIMarkupPlugin.zip" 
                      tofile="${basedir}/dilaAIMarkupPlugin.zip" 
                      overwrite="true" 
                      failonerror="false"/>
                <echo message="Copied dilaAIMarkupPlugin.zip from target to root directory"/>
              </target>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <!--This plugin's configuration is used to store Eclipse m2e settings 
          only. It has no influence on the Maven build itself. -->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <versionRange>[2.8,)</versionRange>
                    <goals>
                      <goal>unpack-dependencies</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore/>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
